# orbbec_cpp2py

./: readme.txt
depth_cpp2py/: CMakeLists.txt  build.sh  readme  rec.py
depth_cpp2py/include/: camera.h
depth_cpp2py/src/: camera.cpp  main.cpp
docker/: opencv_install.sh
docker/scripts/: pose_depth_docker_into.sh  pose_depth_docker_run.sh
